--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,16 @@
 [tool.poetry]
-name = "auto-corr-feature-selection"
+name = "auto_corr_feature_selection"
 version = "0.1.0"
 description = "Automatically select the most relevant features based on correlation."
 authors = ["Andres Di Giovanni <andresdigiovanni@gmail.com>"]
 readme = "README.md"
-packages = [{include = "auto-corr-feature-selection"}]
+packages = [{include = "auto_corr_feature_selection"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+pandas = "^2.0.3"
+numpy = "^1.25.1"
+scikit-learn = "^1.3.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.2.0"
