--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 packages = [{include = "auto_corr_feature_selection"}]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.8"
 pandas = "^2.0.3"
 numpy = "^1.25.1"
 scikit-learn = "^1.3.0"
