--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,8 +2,9 @@
 name = "auto_corr_feature_selection"
 version = "0.1.1"
 description = "Automatically select the most relevant features based on correlation."
-authors = ["Andres Di Giovanni <andresdigiovanni@gmail.com>"]
+authors = ["Andrés Di Giovanni <andresdigiovanni@gmail.com>"]
 readme = "README.md"
+license = { file = "LICENSE" }
 packages = [{include = "auto_corr_feature_selection"}]
 
 [tool.poetry.dependencies]
@@ -15,6 +16,9 @@ scikit-learn = "^1.3.0"
 [tool.poetry.dev-dependencies]
 pytest = "^7.2.0"
 pre-commit = "^2.20.0"
+
+[project.urls]
+Homepage = "https://github.com/andresdigiovanni/auto-corr-feature-selection"
 
 [build-system]
 requires = ["poetry-core"]
