--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,11 @@
 [tool.poetry]
 name = "auto_corr_feature_selection"
-version = "0.1.2"
+version = "0.1.3"
 description = "Automatically select the most relevant features based on correlation."
 authors = ["Andrés Di Giovanni <andresdigiovanni@gmail.com>"]
 readme = "README.md"
 license = "MIT"
+homepage = "https://github.com/andresdigiovanni/auto-corr-feature-selection"
 packages = [{include = "auto_corr_feature_selection"}]
 
 [tool.poetry.dependencies]
@@ -16,9 +17,6 @@ scikit-learn = "^1.3.0"
 [tool.poetry.dev-dependencies]
 pytest = "^7.2.0"
 pre-commit = "^2.20.0"
-
-[project.urls]
-Homepage = "https://github.com/andresdigiovanni/auto-corr-feature-selection"
 
 [build-system]
 requires = ["poetry-core"]
